# vehicle-log-server

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/vls/: config.h  core.h
core/src/: main.c  vls_config.c  vls_core.c
docs/: architecture.md  nonfunctional-requirements.md  protocol.md  risk-register.md  test-plan.md
examples/: CMakeLists.txt  cpp_sdk_demo.cpp
sdk/: CMakeLists.txt
sdk/include/vls/sdk/: logger.hpp
sdk/src/: logger.cpp
tests/: CMakeLists.txt  test_core_smoke.c
